[gd_scene load_steps=8 format=2]

[ext_resource path="res://characters/prince/prince.tscn" type="PackedScene" id=1]
[ext_resource path="res://scenes/main_location/kingdom.gd" type="Script" id=4]
[ext_resource path="res://scenes/main_location/frames/frame_1.tscn" type="PackedScene" id=5]
[ext_resource path="res://scenes/gui/money_counter.tscn" type="PackedScene" id=7]
[ext_resource path="res://scenes/gui/popup.tscn" type="PackedScene" id=8]
[ext_resource path="res://scenes/assets/Coin.png" type="Texture" id=9]
[ext_resource path="res://scenes/assets/clock.png" type="Texture" id=10]

[node name="Kingdom" type="Node2D"]
script = ExtResource( 4 )
velocity = -200.0

[node name="CurrentFrame" parent="." instance=ExtResource( 5 )]

[node name="NextFrame" parent="." instance=ExtResource( 5 )]
position = Vector2( 1022, 0 )

[node name="Prince" parent="." instance=ExtResource( 1 )]
position = Vector2( 118, 416 )

[node name="Control" type="Control" parent="."]
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MoneyCounter2" parent="Control" instance=ExtResource( 7 )]
margin_left = 165.0
margin_top = 15.0
margin_right = 165.0
margin_bottom = 15.0
icon = ExtResource( 10 )

[node name="MoneyCounter" parent="Control" instance=ExtResource( 7 )]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = 15.0
margin_top = 15.0
margin_right = 15.0
margin_bottom = 15.0
icon = ExtResource( 9 )

[node name="Popup" parent="." instance=ExtResource( 8 )]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_right = 1023.0
margin_bottom = 602.0
rect_min_size = Vector2( 192, 108 )

[node name="Timer" type="Timer" parent="."]

[node name="TimerCounter" type="Timer" parent="."]

[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
[connection signal="timeout" from="TimerCounter" to="." method="_on_TimerCounter_timeout"]
